--- a/server/static/Home.html
+++ b/server/static/Home.html
@@ -11,46 +11,9 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="static/style.css" />
-    <link rel="stylesheet" href="static/bootstrap.min.css" />
-    <script>
-      const logout = async (e) => {
-        // Build logout URL and Make GET request to logout endpoint
-        let logout_url = window.location.origin + "/djangoapp/logout";
-        const res = await fetch(logout_url, {
-          method: "GET",
-        });
-
-        const json = await res.json();
-        if (json) {
-          // Clear session storage and reload page
-          let username = sessionStorage.getItem("username");
-          sessionStorage.removeItem("username");
-          window.location.href = window.location.origin;
-          window.location.reload();
-          // Notify user of logout
-          alert("Logging out " + username + "...");
-        } else {
-          alert("The user could not be logged out.");
-        }
-      };
-
-      let checkSession = () => {
-        let curr_user = sessionStorage.getItem("username");
-
-        if (curr_user && curr_user !== "") {
-          document.getElementById("loginlogout").innerHTML =
-            '<span class="homepage_links">' +
-            curr_user +
-            "</span>" +
-            '<a class="homepage_links" onclick="logout()" href="/">Logout</a>';
-        } else {
-          document.getElementById("loginlogout").innerHTML =
-            '<a class="homepage_links" href="/login">Login</a>' +
-            '<a class="homepage_links"  href="/register">Register</a>';
-        }
-      };
-    </script>
+    <link rel="stylesheet" href="/static/style.css" />
+    <link rel="stylesheet" href="/static/bootstrap.min.css" />
+    <script src="/static/js/common.js"></script>
   </head>
   <body onload="checkSession()">
     <nav
@@ -77,17 +40,23 @@
                 class="nav-link active"
                 style="font-size: larger"
                 aria-current="page"
-                href="#"
+                href="/static/Home.html"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" style="font-size: larger" href="/about"
+              <a
+                class="nav-link"
+                style="font-size: larger"
+                href="/static/About.html"
                 >About Us</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" style="font-size: larger" href="/contact"
+              <a
+                class="nav-link"
+                style="font-size: larger"
+                href="/static/Contact.html"
                 >Contact Us</a
               >
             </li>
@@ -103,7 +72,7 @@
         class="card"
         style="width: 50%; margin-top: 50px; align-self: center"
       >
-        <img src="static/car_dealership.jpg" class="card-img-top" alt="..." />
+        <img src="/static/car_dealership.jpg" class="card-img-top" alt="..." />
         <div class="banner">
           <h5>Welcome to our Dealerships!</h5>
           <a
