Made changes to routing within nginx.cof and urls.py and frontend files to ensure app workes correctly on containers

--- a/server/frontend/static/Home.html
+++ b/server/frontend/static/Home.html
@@ -77,7 +77,7 @@
         <div class="banner">
           <h5>Welcome to our Dealerships!</h5>
           <a
-            href="/dealers"
+            href="/dealers/"
             class="btn"
             style="background-color: aqua; margin: 10px"
             >View Dealerships</a
